--- a/renderer/index.html
+++ b/renderer/index.html
@@ -22,6 +22,7 @@
           <!-- add more as needed -->
         </select>
         <input type="text" id="url" placeholder="Enter URL" />
+        <textarea id="requestBody" placeholder="Enter request body"></textarea>
         <button id="sendBtn">Send</button>
       </div>
       <div class="response">
